--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.8.0",
+    "@vercel/node": "^5.3.6",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
