--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
+  "singleQuote": true,
   "semi": true,
-  "singleQuote": false,
-  "printWidth": 120,
-  "arrowParens": "always"
+  "tabWidth": 2,
+  "printWidth": 80
 }
